Field Validations added Gradle file updated Migrating to java 11